<resources>
    <string name="app_name">Inventory Now</string>
    <string name="action_delete_all_entries">Delete All Items</string>
    <string name="empty_view_title_text">Welcome to Inventory Now.</string>
    <string name="empty_view_subtitle_text">Get started by adding an item.</string>
    <string name="editor_activity_title_new">Add an Item</string>
    <string name="editor_activity_title_edit">Edit Item</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_successful">Item saved</string>
    <string name="editor_insert_failed">Error with saving item</string>
    <string name="editor_update_successful">Item updated</string>
    <string name="editor_update_failed">Error with updating item</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_successful">Item deleted</string>
    <string name="editor_delete_failed">Error with deleting item</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="category_overview">Overview</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_image">Image</string>
    <string name="hint_name">Name</string>
    <string name="hint_desc">Description</string>
    <string name="hint_quantity">Quantity</string>
    <string name="no_desc">No description specified.</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_desc">Description</string>
    <string name="you_have">You have: \u0020</string>
    <string name="sale_button">Sell</string>
    <string name="order_button">Order</string>
    <string name="delete_button">Delete</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="validity">Please enter an item name.</string>
    <string name="item_content_desc">Image for inventory item</string>
    <string name="app_desc">Simple Inventory Management</string>
    <string name="change_photo">Change Photo</string>
    <string name="category_cost">Cost</string>
    <string name="category_price">Price</string>
    <string name="hint_category">Category</string>
    <string name="placeholder_price">Price: 5 INR</string>
    <string name="placeholder_category">Category</string>
    <string name="sign_out">Sign Out</string>
    <string name="general">General</string>
    <string name="about">About</string>
    <string name="default_low_stock">5</string>
    <string name="key_low_stock">lowStock</string>
    <string name="default_low_stock_summary">This is the value at which you want to be notified of "low stock". The notification icon for low stock on the main screen comes from this setting. For example, if you set 10 as the Low Stock, as soon as an item goes below 10, a notification will be displayed.</string>
    <string name="default_optimum_quantity_summary">The default quantity of items you think are optimum. This will be used when ordering items. For example, if you have 3 of an item and your optimum quantity is 10 then 7 items will be ordered automatically.</string>
    <string name="default_optimum_quantity">10</string>
    <string name="key_optimum_quantity">optimumQuantity</string>
    <string name="summary_about">Inventory Now lets you manage inventories easily and quickly. It\'s a simple app to get stuff done so that you can focus on the better things.</string>
    <string name="key_send_feedback">feedback</string>
    <string name="summary_support">Got any queries? I\'m happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_about">About</string>
    <string name="title_optimum_quantity">Optimum Quantity</string>
    <string name="title_low_stock">Low Stock</string>
    <string name="choose_email_client">Choose Email Client</string>
    <string name="settings">Settings</string>
</resources>
